[package]
name = "flui-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Frame scheduling, task prioritization, and animation coordination for FLUI"
keywords = ["scheduler", "vsync", "animation", "frame", "ticker"]
categories = ["gui", "game-development", "rendering"]

[dependencies]
# Flui foundation (for BindingBase)
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }

# Cross-platform time (web-time is the maintained replacement for instant)
web-time = "1.1"

# Thread-safe synchronization
parking_lot.workspace = true

# Lock-free concurrent collections
dashmap.workspace = true

# Error derive
thiserror.workspace = true

# Event notification for async completion callbacks
event-listener = "5.3"

# Logging
tracing.workspace = true

# Serialization (optional)
serde = { workspace = true, optional = true }

[dev-dependencies]
# For testing only

[lib]
name = "flui_scheduler"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]
