[package]
name = "flui-semantics"
version = "0.1.0"
edition = "2021"
description = "Semantics tree for FLUI accessibility - part of 5-tree architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/flui"
keywords = ["ui", "accessibility", "semantics", "a11y", "screen-reader"]
categories = ["gui", "accessibility"]

[features]
default = []
# Exposes test-only constructors (e.g. `SemanticsOwner::new_without_callback`)
# to integration tests in downstream crates without leaking into production
# builds. Per PR #93 testing-feature-gate pattern in flui-interaction.
testing = []

[dependencies]
# Foundation - canonical ID types (SemanticsId)
flui-foundation = { path = "../flui-foundation" }

# Tree abstractions - TreeRead, TreeNav, etc.
flui-tree = { path = "../flui-tree" }

# Types - geometry, semantics types
flui-types = { path = "../flui-types" }

# Slab storage for O(1) access
slab = "0.4"

# Thread-safe primitives
parking_lot = "0.12"

# Tracing for diagnostics
tracing = "0.1"

# Small-string optimization - O(1) clone for label/hint/value
smol_str = "0.3"

# Stack-allocated vectors for small collections (children, actions)
smallvec = "1.15"

# Fast hashing for SemanticsId HashMap keys
rustc-hash = "2.1"

[dev-dependencies]
