[package]
name = "flui-semantics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Semantics tree for FLUI accessibility - part of 5-tree architecture"
keywords = ["ui", "accessibility", "semantics", "a11y", "screen-reader"]
categories = ["gui", "accessibility"]

[features]
default = []
# Exposes test-only constructors (e.g. `SemanticsOwner::new_without_callback`)
# to integration tests in downstream crates without leaking them into
# production builds.
testing = []

[dependencies]
# Foundation - canonical ID types (SemanticsId)
flui-foundation = { path = "../flui-foundation", version = "0.2.0" }

# Tree abstractions - TreeRead, TreeNav, etc.
flui-tree = { path = "../flui-tree", version = "0.2.0" }

# Types - geometry, semantics types
flui-types = { path = "../flui-types", version = "0.2.0" }

# Slab storage for O(1) access
slab = "0.4"

# Thread-safe primitives
parking_lot = "0.12"

# Tracing for diagnostics
tracing = "0.1"

# Small-string optimization - O(1) clone for label/hint/value
smol_str = "0.3"

# Stack-allocated vectors for small collections (children, actions)
smallvec = "1.15"

# Fast hashing for SemanticsId HashMap keys
rustc-hash = "2.1"

# Typed public errors
thiserror.workspace = true

[dev-dependencies]

[lints]
workspace = true
